# zork_ai

./: .gitignore  README-STRUCTURED-OUTPUTS.md  README.md  pyproject.toml  runme.txt
examples/themes/: README.md
src/adventure/: __init__.py  cli.py  engine.py  generator.py  llm.py  mapper.py  schema.py  utils.py  validator.py
tests/: test_validator.py
