
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adventure-agent"
version = "0.1.0"
description = "Starter: procedural text-adventure generator with LLM descriptions"
authors = [{name = "You"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "typer>=0.12",
  "rich>=13.7",
  "networkx>=3.3",
  "openai>=1.40",  # recent SDK line; adjust if needed
]

[project.scripts]
adventure = "adventure.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
